# utils3d

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  doc.md  gen_doc.py  gen_interface.py  gen_unified_interface.py  pyproject.toml  rasterizer.py  setup.py  shapes.py  test.py  utils.py  wavefront_obj.py
gl/: __init__.py  gl.py
numpy/: shapes.py  utils.py
numpy_/: __init__.py  mesh.py  rasterizer.py  utils.py  wavefront_obj.py
test/: test.py
test/io_/: write_ply.py
torch/: utils.py
torch_/: __init__.py  mesh.py  transforms.py  utils.py
utils3d/: __init__.py  _helpers.py  glcontext.py  helpers.py  wavefront_obj.py
utils3d/_unified/: __init__.py  __init__.pyi
utils3d/interface/: __init__.py  __init__.pyi
utils3d/io/: __init__.py  colmap.py  glb.py  obj.py  ply.py  wavefront_obj.py
utils3d/io_/: __init__.py  colmap.py  ply.py  wavefront_obj.py
utils3d/numpy/: .maps.__all__.py  __init__.py  _helpers.py  _io.__all__.py  _maps.__all__.py  _pose.__all__.py  _segment_ops.__all__.py  _transforms.__all__.py  _utils.__all__.py  maps.py  mesh.py  pose.py  quadmesh.py  rasterization.py  segment_ops.py  spline.py  transforms.py  utils.py
utils3d/numpy_/: __init__.py  _helpers.py  mesh.py  rasterization.py  transforms.py  utils.py
utils3d/rasterization_/: __init__.py  gl.py
utils3d/torch/: .rasterization.__all__.py  .transforms.__all__.py  .utils.__all__.py  __init__.py  _helpers.py  _maps.__all__.py  _mesh.__all__.py  _pose.__all__.py  _segment_ops.__all__.py  _transforms.__all__.py  _utils.__all__.py  helpers.py  maps.py  mesh.py  nerf.py  pose.py  rasterization.py  segment_ops.py  transforms.py  utils.py
utils3d/torch_/: mesh.py  (+6 more)
(+87 files in other folders)
