[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils3d"
version = "0.0.2"
description = "A small package for 3D graphics"
readme = "README.md"
authors = [
    {name = "EasternJournalist", email = "wangrc2081cs@mail.ustc.edu.cn"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "moderngl",
    "numpy",
    "plyfile",
    "scipy"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/EasternJournalist/utils3d"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils3d*"]

[tool.setuptools.package-data]
"utils3d.numpy.shaders" = ["*"]